@@ -4,12 +4,13 @@
   state:
     release: alpha
     api: alpha
-  date: 2021-03-13
+  date: 2021-10-08
   license:
     identifier: BSD-2-Clause
     uri: http://www.horde.org/licenses/bsd
-  notes: |+
-    
+  notes: |
+    [rla] Support horde/http_server middleware stacks.
+    |+
 3.0.0alpha3:
   api: 3.0.0alpha1
   state:
